Mudanças na estilização

--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Terça do Café</title>
     <style>
-        body {
+       body {
             display: flex;
             flex-direction: column;
             align-items: center;
             min-height: 100vh;
             margin: 0;
-            background-color: #fce4ec; /* Rosa mais claro */
+            background-color: #e0dedc; /* Marrom mais claro */
             font-family: 'Montserrat', sans-serif !important;
         }
 
         h1 {
             margin-top: 20px;
-            color: #ff4081; /* Rosa mais escuro */
+            color: #4d2d00; /* Marrom mais escuro */
             font-size: 2em; /* Aumentei o tamanho da fonte */
         }
 
@@ -38,7 +38,7 @@
             width: 100%;
             margin-bottom: 20px;
             padding: 20px;
-            background-color: #fff;
+            background-color: #c2b8a3; /* Marrom mais claro */
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
@@ -51,7 +51,8 @@
         }
 
         h2 {
-            color: #ff4081; /* Rosa mais escuro */
+            color: #4d2d00; /* Marrom mais escuro */
+            margin-bottom: 10px; /* Adicionei margem inferior para espaçamento */
         }
 
         p {
@@ -61,7 +62,7 @@
     </style>
 </head>
 <body>
-    <h1>Terça do Café 🎵</h1>
+    <h1>Terça do Café ☕</h1>
 
     <div class="container">
         <div class="versos">
@@ -97,8 +98,14 @@
 
                 <hr>
 
-            <strong><center><p>- Refrão - </p></center></strong>
-        <strong><center><p>- Ponte - </p></center></strong> 
+            <strong><center><p>- Ponte - </p></center></strong>
+
+                <hr>
+
+        <strong><center><p>- Refrão - </p></center></strong> 
+
+        <hr>
+
     <strong><center><p>- Final - </p></center></strong>
 
         </div>
@@ -124,6 +131,6 @@
         </div>
     </div>
 
-    <center><p style="color: #ff4081;">Um pouco da nossa história em canção! <br> te amo 🩷</p></center>
+    <center><p style="color: #4d2d00">Um pouco da nossa história em canção! <br> te amo muitão 🤎</p></center>
 </body>
 </html>
